--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
 	<body>
 
 		<div id='world'></div>
+		<audio id = 'sound' loop autoplay preload><source src = "audio/rain.mp3" type = "audio/mpeg" > </audio>
 
+		<button id = 'button-rain'> rain </button>
+		<button id = 'button-sunny'> sunny </button>
+
+		<script src="jquery-3.1.0.js"></script>
 		<script src= "js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src= "js/rain.js"></script>
+		<script src = "js/sun.js"></script>
 		<script src= "js/main.js"></script>
 
 		<div>test</div>
+
+
 
 	</body>
 </html>
