--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 	</head>
 	<body>
 
-		<div id='world'></div>
+		<div id='world' class = 'world-rain'></div>
 		<audio id = 'sound' loop autoplay preload><source src = "audio/rain.mp3" type = "audio/mpeg" > </audio>
 
 		<button id = 'button-rain'> rain </button>
 		<button id = 'button-sunny'> sunny </button>
+		<button id = 'button-snow'> snow </button>
 
 		<script src="jquery-3.1.0.js"></script>
 		<script src= "js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
+		<script src= "js/snow.js"></script>
 		<script src= "js/rain.js"></script>
 		<script src = "js/sun.js"></script>
 		<script src= "js/main.js"></script>
