Low poly clouds

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 
-		<div id='world' class = 'world-rain'></div>
+		<div id='world' class = 'world-cloud'></div>
 		<audio id = 'sound' loop autoplay preload><source src = "audio/rain.mp3" type = "audio/mpeg" > </audio>
 
 		<button id = 'button-rain'> rain </button>
@@ -21,6 +21,7 @@
 		<script src="jquery-3.1.0.js"></script>
 		<script src= "js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
+		<script src= "js/cloud.js"></script>
 		<script src= "js/snow.js"></script>
 		<script src= "js/rain.js"></script>
 		<script src = "js/sun.js"></script>
