Added static weather call

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 		<button id = 'button-rain'> rain </button>
 		<button id = 'button-sunny'> sunny </button>
 		<button id = 'button-snow'> snow </button>
+		<button id = 'button-cloudy'> cloudy </button>
+		<button id = 'refresh'>refresh </button>
 
 		<script src="jquery-3.1.0.js"></script>
+		<script src = "js/weathercall.js"></script>22
 		<script src= "js/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src= "js/cloud.js"></script>
