--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 		<div id='world' class = 'world-cloud'></div>
 		<audio id = 'sound' loop autoplay preload><source src = "audio/rain.mp3" type = "audio/mpeg" > </audio>
 
-		<button id = 'button-rain'> rain </button>
-		<button id = 'button-sunny'> sunny </button>
-		<button id = 'button-snow'> snow </button>
-		<button id = 'button-cloudy'> cloudy </button>
+		<button id = 'button-rain' class = "not-selected"> rain </button>
+		<button id = 'button-sunny' class = "not-selected"> sunny </button>
+		<button id = 'button-snow' class = "not-selected"> snow </button>
+		<button id = 'button-cloudy' class = "not-selected"> cloudy </button>
 		<button id = 'refresh'>refresh </button>
+		<button id = 'mute'>
 
 		<script src="jquery-3.1.0.js"></script>
 		<script src = "js/weathercall.js"></script>22
