Stylized location input

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<audio id = 'sound-rain' loop autoplay preload><source src = "audio/rain.mp3" type = "audio/mpeg" > </audio>
 
 
-		<div id = "location-input">Where are you?</div>
-		<input type="text" name="location" class="location" autofocus="off" autocomplete="off" placeholder=""/>
+		<div id = "location-input">Where am I?</div>
+		<input type="text" name="location" class="location" autofocus="off" autocomplete="off" placeholder="Philadelphia, PA"/>
 
 		<button id = 'button-rain' class = "selected"> rain </button>
 		<button id = 'button-sunny' class = "not-selected"> sunny </button>
