--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 	<body>
 
 		<div id='world' class = 'world-cloud'></div>
+
+		<!--
 		<audio id = 'sound-rain' loop autoplay preload><source src = "audio/rain.mp3" type = "audio/mpeg" > </audio>
-		<audio id = 'sound-sunny' loop autoplay preload><source src = "audio/sunny.mp3" type = "audio/mpeg" > </audio>
-		<audio id = 'sound-snow' loop autoplay preload><source src = "audio/snow.mp3" type = "audio/mpeg" > </audio>
+		<audio id = 'sound-sunny' loop autoplay preload muted><source src = "audio/sunny.mp3" type = "audio/mpeg" > </audio>
+		<audio id = 'sound-snow' loop autoplay preload muted><source src = "audio/snow.mp3" type = "audio/mpeg" > </audio>
+		-->
 		<audio id = 'sound-cloudy' loop autoplay preload><source src = "audio/cloud.mp3" type = "audio/mpeg" > </audio>
 
 
